# opencvtest

./: CMakeLists.txt  readme.txt
src/loadImgTest/: main.cpp
src/videoTest/: main.cpp
